--- a/less/variables.less
+++ b/less/variables.less
@@ -2,8 +2,10 @@
 
 // Gray and Brand Colors for use across theme
 
-@theme-primary:    #2C3E50;
-@theme-success:    #18BC9C;
+@theme-primary:    #0084FF;
+@theme-success: #0077e6;
+//@theme-success: #9fcae6;
+//@theme-success:    darken(@theme-primary, 20.5%);
 
 @gray-base:        #000;
 @gray-darker:      lighten(@gray-base, 13.5%); // #222
